# genai-starter

./: DockerFile  docker-compose.yml  end_to_end.md  requirements.txt  setup.cfg
data/embeddings/text_embeddings/: first_embed2.pkl
documents/: hello.txt
notebooks/: 801_chatbot.ipynb
src/genai_start/: 201_text_embedding_service.py  202_read_embedding_service.py  202_read_text_embedding_service.py  301_document_embedding_service.py  302_read_document_embedding_service.py
