[metadata]
name = genai_starter
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A project for generating text embeddings using Google Generative AI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    langchain
    langchain-google-genai
    langchain-openai